--- a/otest/CMakeLists.txt
+++ b/otest/CMakeLists.txt
@@ -3,5 +3,5 @@ project(otest)
 
 find_package(Omegalib)
 include_directories(${OMEGA_INCLUDE_DIRS})
-add_executable(otest Cube.cpp Shader.cpp Utils.cpp main.cpp)
+add_executable(otest Points.cpp Shader.cpp Utils.cpp main.cpp)
 target_link_libraries(otest ${OMEGA_LIB})
