test circle point on cave

--- a/otest/CMakeLists.txt
+++ b/otest/CMakeLists.txt
@@ -3,5 +3,8 @@ project(otest)
 
 find_package(Omegalib)
 include_directories(${OMEGA_INCLUDE_DIRS})
+
+#add_definitions(-DUSE_GEOM)
+
 add_executable(otest Points.cpp Shader.cpp Utils.cpp main.cpp)
 target_link_libraries(otest ${OMEGA_LIB})
