--- a/opotree/CMakeLists.txt
+++ b/opotree/CMakeLists.txt
@@ -11,8 +11,8 @@ IF(${NO_GRAPHICS})
 ELSE()
 	find_package(Omegalib)
 	include_directories(${OMEGA_INCLUDE_DIRS})
-	add_executable(opotree main.cpp Utils.cpp Shader.cpp cJSON.cpp NodeGeometry.cpp Material.cpp PointCloud.cpp Thread.cpp)
-	target_link_libraries(opotree ${OMEGA_LIB})
+	add_executable(opotree main.cpp Utils.cpp Shader.cpp cJSON.cpp NodeGeometry.cpp PointCloud.cpp Thread.cpp Menu.cpp)
+	target_link_libraries(opotree ${OMEGA_LIB} ${OMEGA_TOOLKIT_LIB} python)
 
 ENDIF()
 
