support standalone app

--- a/gigapoint/omegalib_app/CMakeLists.txt
+++ b/gigapoint/omegalib_app/CMakeLists.txt
@@ -29,6 +29,8 @@ SET( srcs
 		../Material.cpp
 		)
 
+add_definitions(-DOMEGALIB_APP)
+
 add_executable(gigapoint ${headers} ${srcs} )
 target_link_libraries(gigapoint ${OMEGA_LIB} ${OMEGA_TOOLKIT_LIB} python2.7)
 
