changed to threaded segment tracing

--- a/gigapoint/CMakeLists.txt
+++ b/gigapoint/CMakeLists.txt
@@ -45,6 +45,8 @@ add_library(${MODULE_NAME} MODULE
 	ColorTexture.cpp 
 	Material.h
 	Material.cpp
+        TracingSegment.cpp
+        TracingSegment.h
         FractureTracer.cpp
         FractureTracer.h
 	FrameBuffer.h
